--- a/.env.development
+++ b/.env.development
@@ -2,4 +2,4 @@ ENV = 'development'
 
 VUE_APP_BASE_API = '/api'
 
-VUE_APP_BASE_URL = 'http://127.0.0.1/7777'
+VUE_APP_BASE_URL = 'http://127.0.0.1:7777'
